# rust-clippy

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml
clippy_config/src/: conf.rs  types.rs
clippy_dev/: Cargo.toml
clippy_dev/src/: fmt.rs
clippy_dev/src/setup/: intellij.rs
clippy_lints/: Cargo.toml
clippy_lints/src/: declared_lints.rs  error_message_case.rs  lib.rs  library_crates_error_enum.rs
clippy_lints/src/functions/: mod.rs
clippy_utils/: Cargo.toml
clippy_utils/src/: lib.rs  symbolic_evaluate.rs
tests/ui/: error_message_case.rs  library_crates_error_enums.rs
tests/ui-toml/toml_unknown_key/: conf_unknown_key.stderr
