[package]
name = "clippy_utils"
version = "0.1.77"
edition = "2021"
publish = false

[target.'cfg(NOT_A_PLATFORM)'.dependencies]
rustc_ast = { path = "/home/francis/CLionProjects/rust/compiler/rustc_ast" }
rustc_ast_pretty = { path = "/home/francis/CLionProjects/rust/compiler/rustc_ast_pretty" }
rustc_attr = { path = "/home/francis/CLionProjects/rust/compiler/rustc_attr" }
rustc_const_eval = { path = "/home/francis/CLionProjects/rust/compiler/rustc_const_eval" }
rustc_data_structures = { path = "/home/francis/CLionProjects/rust/compiler/rustc_data_structures" }
rustc_driver = { path = "/home/francis/CLionProjects/rust/compiler/rustc_driver" }
rustc_errors = { path = "/home/francis/CLionProjects/rust/compiler/rustc_errors" }
rustc_hir = { path = "/home/francis/CLionProjects/rust/compiler/rustc_hir" }
rustc_hir_typeck = { path = "/home/francis/CLionProjects/rust/compiler/rustc_hir_typeck" }
rustc_index = { path = "/home/francis/CLionProjects/rust/compiler/rustc_index" }
rustc_infer = { path = "/home/francis/CLionProjects/rust/compiler/rustc_infer" }
rustc_lexer = { path = "/home/francis/CLionProjects/rust/compiler/rustc_lexer" }
rustc_lint = { path = "/home/francis/CLionProjects/rust/compiler/rustc_lint" }
rustc_middle = { path = "/home/francis/CLionProjects/rust/compiler/rustc_middle" }
rustc_mir_dataflow = { path = "/home/francis/CLionProjects/rust/compiler/rustc_mir_dataflow" }
rustc_session = { path = "/home/francis/CLionProjects/rust/compiler/rustc_session" }
rustc_span = { path = "/home/francis/CLionProjects/rust/compiler/rustc_span" }
rustc_target = { path = "/home/francis/CLionProjects/rust/compiler/rustc_target" }
rustc_trait_selection = { path = "/home/francis/CLionProjects/rust/compiler/rustc_trait_selection" }

[dependencies]
clippy_config = { path = "../clippy_config" }
arrayvec = { version = "0.7", default-features = false }
itertools = "0.11"
rustc-semver = "1.1"

[features]
deny-warnings = ["clippy_config/deny-warnings"]

[package.metadata.rust-analyzer]
# This crate uses #[feature(rustc_private)]
rustc_private = true
